<resources>
	<string name="app_name">back.io</string>
	<string name="title_connecting">Verbindet</string>
	<string name="title_disconnecting">Entkoppelt</string>
	<string name="title_reconnect_attempt">Wiederverbinden</string>
	<string name="message_wait">Bitte warten</string>
	<string name="action_settings">Einstellungen</string>
	<string name="action_disconnect">Entkoppeln</string>
	<string name="btn_home">Home</string>
	<string name="btn_diary">Tagebuch</string>
	<string name="btn_tips">Tipps</string>
	<string name="btn_sensor">Sensor</string>
	<string name="btn_tip">Tipps</string>
	<string name="btn_sensor_connect">Sensor verbinden</string>
	<string name="btn_exercise">Übungen</string>
	<string name="btn_awarness">Aufklärung</string>
	<string name="btn_connect">Sensor Verbinden</string>
	<string name="btn_disconnect">Sensor Trennen</string>
	<string name="sensor_connect">Sensor koppeln</string>
	<string name="sensor_disconnect">Sensor entkoppeln</string>
	<string name="synchronization">Jetzt Synchronisieren</string>
	<string name="synchroH">24 h Synchronisation</string>
	<string name="title_home">Startseite</string>
	<string name="title_diary">Tagebuch</string>
	<string name="title_tips">Tipps und Übungen</string>
	<string name="title_sensor">MbientLab</string>
	<string name="title_awarness">Aufklärung</string>
	<string name="title_exercise">Übungen</string>
	<string name="title_tip">Tipps</string>
	<string name="sync_now">Sensor Synchronisieren</string>
	<string name="last_sync">Letzte Synchronisation war</string>
	<string name="sync_time">24-h Synchronisation</string>
	<string name="text_Sensor">Der ultimative Begleiter für ein gesundes Leben</string>

	<string name="title_text_awarness">Weshalb ist Sitzen ungesund?</string>
	<string name="text_awarness_pt1">Egal, ob beim Frühstück, im Auto auf dem Weg zur Arbeit oder abends zu Hause: Täglich verbringen wir den Großteil unserer Zeit – bewusst oder unbewusst – sitzend. Davon fünf Stunden am Stück, und unser Blutzuckerspiegel ist deutlich und dauerhaft über dem natürlichen Soll. Ein unnatürlicher Zustand, der auf Dauer krank macht. Eine amerikanische Studie des National Institute of Health kam zu dem Ergebnis, dass zu viel Sitzen die Gefahr, an Diabetes zu erkranken, um 7 % erhöht.</string>
	<string name="text_awarness_pt2">Durch langes Sitzen fährt der Stoffwechsel runter, sodass weniger Kalorien verbrannt werden. Die Folgen sind Übergewicht und ein erhöhtes Diabetes-Risiko. Die Gefahr für Verkalkungen der Herzkranzgefäße und Herzinfarkte steigt zudem mit jeder Stunde, die der Mensch pro Tag sitzt. Schuld daran ist insbesondere das Bauchfett. Es produziert Hormone und Enzyme, die als Botenstoffe in das Immunsystem des Körpers eingreifen und entzündliche Prozesse auslösen.</string>
	<string name="text_awarness_pt3">US-Wissenschaftler fanden zudem heraus, dass Bewegungsmangel die Chance auf Herz-Kreislauf-Erkrankungen um 6 % und die auf Brust- und Darmkrebs um 10 % steigert. Zu ähnlichen Ergebnissen kamen auch australische Forscher. In ihrer Langzeitstudie untersuchten sie die Folgen von Bewegungsmangel im Zusammenhang mit dem Sitzen vor dem Fernseher. Das Ergebnis: Im Vergleich zu Teilnehmern, die nicht länger als zwei Stunden am Tag vor dem Fernseher verbrachten, hatten Versuchsteilnehmer, die vier oder mehr Stunden fernsahen, ein um 46 % erhöhtes Sterberisiko und ein um 80 % erhöhtes Risiko einer Herz-Kreislauf-Erkrankung. Beide Forschergruppen kommen außerdem zu dem Ergebnis, dass mehr Bewegung diesen Risiken entgegenwirkt.</string>
	<string name="text_awarness_pt4">Lange Zeiten der Passivität wirken sich zudem negativ auf die Leistungsfähigkeit der Muskulatur aus. Fehlhaltungen werden dadurch begünstigt, sodass sich die Muskulatur verkürzt. Besonders Rückenschmerzen sind die Folge.</string>
	<string name="subtitle_awarness">Spazieren kann Helfen</string>
	<string name="text_awarness_pt5">Wenn man bedenkt, dass die Gefässfunktionen schon nach einer Stunde Sitzen derart stark abnehmen, Büroangestellte aber bis zu acht Stunden am Tag sitzen, wird klar, warum Dauersitzen der Gesundheit so massiv schadet.</string>
	<string name="text_awarness_pt6">Die Erkenntnisse von Thosars Team ermöglichen es uns jedoch, aktiv vorzubeugen. Einmal in der Stunde fünf Minuten zu gehen lässt sich schliesslich recht einfach in den Arbeitsalltag integrieren.</string>
	<string name="text_awarness_pt7">Dabei muss es sich nicht immer um einen „richtigen“ Spaziergang handeln. Zwar ist Bewegung an der frischen Luft am gesündesten, doch der Chef sieht es bestimmt nicht gern, wenn die Mitarbeiter zu jeder vollen Stunde fünf Minuten vor dem Bürogebäude auf und ab gehen.</string>
	<string name="text_awarness_pt8">Zum Glück geht es auch einfacher: Ein Gang zum Kopierer oder in die Kaffeeküche und öfter mal die Treppe zu benutzen tun es ja auch. Und vielleicht lassen sich gar das eine oder andere Minitrampolin oder Laufband auf der Büroetage integrieren.</string>

	<string name="btn_sensor_disconnect">Sensor abkoppeln</string>
	<string name="tip_tip1">Tipp: Mache eine Übung mit einem Pilates-Kissen</string>
	<string name="tip_tip2">Tipp: Führe eine Ruderübung durch.</string>

	<string name="mac_address_title">Adresse</string>
	<string name="device_header">Mein Sensor</string>
	<string name="device_name_title">Name</string>
	<string name="status_connection_title">Status</string>
	<string name="status_connected">Verbunden</string>
</resources>
