<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".TipsActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="bottom"
		android:orientation="vertical">

		<Button
			android:id="@+id/btn_tip"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:text="@string/btn_tip"
			android:layout_marginBottom="60dp"
			android:background="@color/colorPrimary"
			android:textAlignment="center"
			android:textColor="#fff"
			android:fontFamily="@font/roboto_bold"
			android:textSize="20sp"/>

		<Button
			android:id="@+id/btn_exercise"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:text="@string/btn_exercise"
			android:layout_marginBottom="60dp"
			android:background="@color/colorPrimary"
			android:textAlignment="center"
			android:textColor="#fff"
			android:fontFamily="@font/roboto_bold"
			android:textSize="20sp"/>

		<Button
			android:id="@+id/btn_awarness"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:text="@string/btn_awarness"
			android:background="@color/colorPrimary"
			android:textAlignment="center"
			android:textColor="#fff"
			android:fontFamily="@font/roboto_bold"
			android:textSize="20sp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="42dp"
			android:layout_gravity="bottom"
			android:gravity="end"
			android:orientation="horizontal"
			android:layout_marginTop="250dp">

			<Button
				android:id="@+id/btn_home"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@color/colorPrimary"
				android:text="@string/btn_home"
				android:textAlignment="center"
				android:fontFamily="@font/roboto_light"/>

			<Button
				android:id="@+id/btn_diary"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@color/colorPrimary"
				android:text="@string/btn_diary"
				android:textAlignment="center"
				android:fontFamily="@font/roboto_light"/>

			<Button
				android:id="@+id/btn_tips"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@color/colorPrimary"
				android:text="@string/btn_tips"
				android:textAlignment="center"
				android:fontFamily="@font/roboto_light"/>

			<Button
				android:id="@+id/btn_sensor"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@color/colorPrimary"
				android:text="@string/btn_sensor"
				android:textAlignment="center"
				android:fontFamily="@font/roboto_light"/>
		</LinearLayout>

	</LinearLayout>

</FrameLayout>
