<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".TipsFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="top"
		android:orientation="vertical"
		android:padding="16dp">

		<Button
			android:id="@+id/btn_tip"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_marginBottom="60dp"
			android:background="@color/colorPrimary"
			android:fontFamily="@font/roboto_bold"
			android:text="@string/btn_tip"
			android:textAlignment="center"
			android:textColor="#fff"
			android:textSize="20sp" />

		<Button
			android:id="@+id/btn_exercise"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_marginBottom="60dp"
			android:background="@color/colorPrimary"
			android:fontFamily="@font/roboto_bold"
			android:text="@string/btn_exercise"
			android:textAlignment="center"
			android:textColor="#fff"
			android:textSize="20sp" />

		<Button
			android:id="@+id/btn_awarness"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:background="@color/colorPrimary"
			android:fontFamily="@font/roboto_bold"
			android:text="@string/btn_awarness"
			android:textAlignment="center"
			android:textColor="#fff"
			android:textSize="20sp" />

	</LinearLayout>

</FrameLayout>
