<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".DiaryFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="bottom"
		android:gravity="bottom"
		android:orientation="vertical"
		android:padding="16dp">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical" />
		</ScrollView>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="42dp"
			android:layout_gravity="bottom"
			android:gravity="end"
			android:orientation="horizontal"
			android:layout_marginTop="250dp">

			<LinearLayout
				android:id="@+id/btn_home"
				android:layout_width="91dp"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<ImageButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:srcCompat="@drawable/ic_home_black_24dp" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/btn_home"
					android:textAlignment="center"
					android:fontFamily="@font/roboto_light"
					android:textColor="@color/textColor"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/btn_diary"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="vertical">

				<ImageButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:srcCompat="@drawable/ic_import_contacts_green_24dp" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/btn_diary"
					android:layout_gravity="bottom"
					android:textAlignment="center"
					android:fontFamily="@font/roboto_light"
					android:textColor="@color/colorPrimary"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/btn_tips"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="vertical">

				<ImageButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					app:srcCompat="@drawable/ic_content_paste_black_24dp" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/btn_tips"
					android:textAlignment="center"
					android:fontFamily="@font/roboto_light"
					android:textColor="@color/textColor"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/btn_sensor"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="vertical">

				<ImageButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:srcCompat="@drawable/ic_bluetooth_black_24dp" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/btn_sensor"
					android:textAlignment="center"
					android:fontFamily="@font/roboto_light"
					android:textColor="@color/textColor"/>
			</LinearLayout>

		</LinearLayout>
	</LinearLayout>

</FrameLayout>
