<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".SensorActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="bottom"
		android:gravity="bottom"
		android:orientation="vertical"
		android:padding="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<ImageView
					android:id="@+id/imageView"
					android:layout_width="200dp"

					android:layout_height="200dp"
					android:layout_weight="1"
					android:adjustViewBounds="true"
					android:cropToPadding="true"
					android:scaleType="fitCenter"
					app:srcCompat="@drawable/rclip5" />

				<TextView
					android:id="@+id/textView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="TextView" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/textView3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="TextView" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:orientation="horizontal">

				<Switch
					android:id="@+id/switch1"
					android:layout_width="match_parent"
					android:layout_height="60dp"
					android:layout_weight="1"
					android:text="Switch" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<Button
					android:id="@+id/button4"
					android:layout_width="match_parent"
					android:layout_height="60dp"
					android:layout_weight="1"
					android:text="Button" />
			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="42dp"
			android:layout_gravity="bottom"
			android:gravity="end"
			android:orientation="horizontal"
			android:layout_marginTop="250dp">

			<LinearLayout
				android:id="@+id/btn_home"
				android:layout_width="91dp"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<ImageButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:srcCompat="@drawable/ic_home_black_24dp" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/btn_home"
					android:textAlignment="center"
					android:fontFamily="@font/roboto_light"
					android:textColor="@color/textColor"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/btn_diary"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="vertical">

				<ImageButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:srcCompat="@drawable/ic_import_contacts_black_24dp" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/btn_diary"
					android:layout_gravity="bottom"
					android:textAlignment="center"
					android:fontFamily="@font/roboto_light"
					android:textColor="@color/textColor"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/btn_tips"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="vertical">

				<ImageButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					app:srcCompat="@drawable/ic_content_paste_black_24dp" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/btn_tips"
					android:textAlignment="center"
					android:fontFamily="@font/roboto_light"
					android:textColor="@color/textColor"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/btn_sensor"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="vertical">

				<ImageButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:srcCompat="@drawable/ic_bluetooth_green_24dp" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/btn_sensor"
					android:textAlignment="center"
					android:fontFamily="@font/roboto_light"
					android:textColor="@color/colorPrimary"/>
			</LinearLayout>

		</LinearLayout>
	</LinearLayout>

</FrameLayout>
